Fixed alignment issues at about 1200px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,22 +93,22 @@ h3, p{
 
 /* About us */
 #about{
-    width:70%;
+    width:90%;
     height: 450px;
     margin:0 auto;
     display:flex;
-    align-items:flex-start;
-    padding:20px;
+    justify-content:space-between;
+    /* padding:20px; */
 }
 .page-description img{
     width:auto;
     height:450px
 }
 #about-us{
-    height:390px;
-    width:500px;
-    padding:30px;
-    margin-right:20px;
+    height:430px;
+    width:40%;
+    padding:10px;
+    /* margin-right:20px; */
     border: 1px solid #3A3A3A;
     text-align:center;
     font-size:105%;
@@ -168,8 +168,9 @@ h3, p{
     height: 450px;
     margin:0 auto;
     display:flex;
-    align-items:flex-start;
-    padding:20px;
+    justify-content:space-between;
+    /* align-items:flex-start; */
+    /* padding:20px; */
 }
 #food-philosophy{
     height:390px;
@@ -229,18 +230,19 @@ hr{
 
 /* Location updates (location banner adjustment in original banner grouping) */
 #location-announcements{
-    width:60%;
+    width:90%;
     height: 450px;
     margin:0 auto;
     display:flex;
-    align-items:flex-start;
-    padding:20px;
+    justify-content:space-between;
+    /* align-items:flex-start; */
+    /* padding:20px; */
 }
 #location-text{
     height:390px;
     width:300px;
     padding:30px;
-    margin-left:20px;
+    /* margin-left:20px; */
     border: 1px solid #3A3A3A;
     text-align:center;
     font-size:105%;
@@ -254,7 +256,7 @@ hr{
     width:90%;
     position:relative;
     height:300px;
-    padding:20px;
+    /* padding:20px; */
     margin:0 auto;
     display:flex;
     align-items:center;
@@ -263,11 +265,11 @@ hr{
 .location-sections{
     width:33%;
     height:300px;
-    border:1px solid #000000;
+    border:3px solid #F6efee;
     box-sizing:border-box;
     color:#F6efee;
     padding:30px;
-    margin:5px;
+    /* margin:5px; */
     font-size:1.6em;
     line-height: 1.5em;
     text-align:center;
@@ -302,7 +304,7 @@ footer{
     text-decoration:none;
 }
 #social-links i:hover{
-    color:##ff19a7;
+    color:#ff19a7;
 }
 
 /* For medium screen sizes from 1200px wide & down (smart phones etc) */
@@ -321,6 +323,15 @@ footer{
         top: -79px;
     } */
     /* Menu page layout */
+    #about{
+        padding:0;
+        display:block;
+        height:auto;
+    }
+    #locations{
+        display:block;
+        height:auto;
+    }
     #food-about{
         width:90%;
         height:auto;
@@ -328,7 +339,7 @@ footer{
         display:block;
         padding:0;
     }
-    #food-philosophy{
+    #food-philosophy{    
         height:auto;
         width:auto;
         padding:20px;
@@ -515,20 +526,32 @@ footer{
 }  */
 
 /* For the Lalucha banner */
-/* @media screen and (max-width:600px){
-    #lalucha-banner h1{
-        position:relative;
-        top:64px;
-    }   
+@media screen and (max-width:600px){
+    nav{
+        padding:10px;
+    }
+    #navigation{
+        width: 100%;
+        text-align: center;
+        height:55px;
+    }
+    #navigation > li{
+        font-size:110%;
+        line-height:30px;
+    }
+    #hero-container{
+        width: 100%;
+        height: 300px;
+        overflow:hidden;
+        padding:0;
+    }
     #lalucha-banner img{
-        position:relative;
-        top:7px;
+        top:26px;
     } 
     #foodtruck-overlay{
-        position: relative;
-        top: -9px;
-    }  
-}   */
+        top: 15px;
+    } 
+}   
 
 /* For the Lalucha banner */
 /* @media screen and (max-width:500px){
@@ -569,23 +592,37 @@ footer{
     #foodtruck-overlay{
         position: relative;
         top: -19px;
-    }   */
-} 
+    }   
+} */
 
 /* For small screen sizes from 320px wide & down (smaller smart phones etc) */
 @media screen and (max-width:320px){
-    #navigation > li{
-        font-size:100%;
-        line-height:5px;
-        padding:5px;
+    /* nav{
+        padding:10px;
     }
+    #navigation{
+        width: 100%;
+        text-align: center;
+        height:55px;
+    }
+    #navigation > li{
+        font-size:110%;
+        line-height:30px;
+    } */
+
     /* Hero Image & logo layover */
     #hero-container{
-        width: 100%;
+        /* width: 100%; */
         height: 200px;
-        overflow:hidden;
-        padding:0;
+        /* overflow:hidden;
+        padding:0; */
     }
+    /* #lalucha-banner img{
+        top:26px;
+    }  */
+    /* #foodtruck-overlay{
+        top: 15px;
+    }  */
     /* #hero-image{
         height:auto;
     }
